--- a/myproject/package.json
+++ b/myproject/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.7.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
