--- a/myproject/package.json
+++ b/myproject/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.4"
