--- a/myproject/package.json
+++ b/myproject/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
