--- a/myproject/package.json
+++ b/myproject/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "https://dev.majorlink.store",
   "name": "myproject",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
